sidebar z-index fixed

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
         position: absolute !important;
         top: 100px;
         background-color: white;
-        z-index: 1;
+        z-index: 2;
     }
   }
 
